@@ -1,9 +1,11 @@
-CHANGES.txt - 2009-01-19
+CHANGES.txt - 2009-01-20
 ------------------------
 
 CHANGES IN CUPS V1.4b3
 
 	- Documentation fixes (STR #3044, STR #3057)
+	- The scheduler incorrectly registered default profiles for PostScript
+	  printers with no specified colorspace.
 	- The scheduler incorrectly created an empty org.cups.printers.plist
 	  file on Mac OS X.
 	- cupsGetPPD3() did not look for local PPDs in the right directory.
